Improve readability of PluginReader